--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1"
+    "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
