--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.8",
+    "flowbite-react": "^0.9.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
@@ -28,7 +30,8 @@
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
