--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.19",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.8",
@@ -24,6 +25,7 @@
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.1",
     "react-router": "^6.22.3",
