--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-   
     "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "tippy.js": "^6.3.7"
