--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.8",
     "flowbite-react": "^0.9.0",
+    "js-cookie": "^3.0.5",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
